--- a/app/views/statuc_pages/basics.html.erb
+++ b/app/views/statuc_pages/basics.html.erb
@@ -1,2 +1,9 @@
-<h1>StatucPages#basics</h1>
-<p>Find me in app/views/statuc_pages/basics.html.erb</p>
+<h1>Basics</h1>
+<br><p>Qué es un resource en el contexto de una aplicación web REST en Ruby on
+Rails?</p>
+<br><p>Qué puede hacerse con un resource?</p>
+<br><p>Qué es RESTful routing?</p>
+<br><p>   Cuantas acciones básicas tiene esta filosofía?</p>
+<br><p>   Cuales son?</p>
+<br><p>   Cuales verbos HTTP se utilizan en cada una de ellas?</p>
+
