--- a/app/views/statuc_pages/git.html.erb
+++ b/app/views/statuc_pages/git.html.erb
@@ -1,2 +1,8 @@
-<h1>StatucPages#git</h1>
-<p>Find me in app/views/statuc_pages/git.html.erb</p>
+<h1>Git</h1>
+<p> Inicialización de un repositorio de git nuevo en una aplicación existente</p>
+<p> Creación de un branch nuevo</p>
+<p> Realizar un commit incluyendo todos los cambios actuales</p>
+<p> Inicialización de un repositorio de git nuevo en una aplicación existente</p>
+<p> Inicialización de un repositorio de git nuevo en una aplicación existente</p>
+<p> Inicialización de un repositorio de git nuevo en una aplicación existente</p>
+<p> Inicialización de un repositorio de git nuevo en una aplicación existente</p>
