--- a/app/views/statuc_pages/ruby.html.erb
+++ b/app/views/statuc_pages/ruby.html.erb
@@ -1,2 +1,10 @@
-<h1>StatucPages#ruby</h1>
-<p>Find me in app/views/statuc_pages/ruby.html.erb</p>
+<h1>Ruby</h1>
+<br><p>Interpolación de strings</p>
+<br><p>Cómo se declara un array y cómo se adiciona un elemento al final del array</p>
+<br><p>Cómo se itera un array utilizando el comando each</p>
+<br><p>Cómo se declara un hash</p>
+<br><p>Cómo se itera un hash utilizando el comando each</p>
+<br><p>Que es un block en ruby? De un ejemplo de cómo utilizarlo</p>
+<br><p>Cual es la convención en Ruby a la hora de nombrar variables?</p>
+<br><p>Qué son attr_reader, attr_writer y attr_accesor? Para qué sirven?</p>
+
