--- a/app/views/statuc_pages/home.html.erb
+++ b/app/views/statuc_pages/home.html.erb
@@ -1,2 +1,35 @@
-<h1>StatucPages#home</h1>
-<p>Find me in app/views/statuc_pages/home.html.erb</p>
+<h1>Proyecto 1</h1>
+<p>
+Aqui encuentras las paginas del proyecto 
+<br>
+<br><a href="https://51f8a45f97a547eba6929f90638cb262.vfs.cloud9.us-east-2.amazonaws.com/statuc_pages/basics">Basics</a>
+<br>
+<br><a href="https://51f8a45f97a547eba6929f90638cb262.vfs.cloud9.us-east-2.amazonaws.com/statuc_pages/ruby">Ruby</a>
+<br>
+<br><a href="https://51f8a45f97a547eba6929f90638cb262.vfs.cloud9.us-east-2.amazonaws.com/statuc_pages/git">Git</a>
+<br>
+<br>Angela Ochoa Proyecto 1
+<br>
+<br><script>
+
+var mydate=new Date();
+var year=mydate.getYear();
+if (year < 1000)
+year+=1900;
+var day=mydate.getDay();
+var month=mydate.getMonth()+1;
+if (month<10)
+month="0"+month;
+var daym=mydate.getDate();
+if (daym<10)
+daym="0"+daym;
+document.write("<small><font color='000000' face='Arial'><b>"+daym+"/"+month+"/"+year+"</b></font></small>")
+
+</script>
+
+<script type="text/javascript">
+var d = new Date();
+document.write(d.getHours(),':'+d.getMinutes(),':'+d.getSeconds());
+</script>
+
+</p>
