--- a/app/views/statuc_pages/basics.html.erb
+++ b/app/views/statuc_pages/basics.html.erb
@@ -1,9 +1,17 @@
 <h1>Basics</h1>
 <br><p>Qué es un resource en el contexto de una aplicación web REST en Ruby on
 Rails?</p>
+<p>Rta. Es el encargado de definir las rutas osea el denominado enrutador. </p>
 <br><p>Qué puede hacerse con un resource?</p>
+<p>Rta. Definir las rutas  de las diferentes 
+  paginas de un proyecto definiendolas en la clase routes.</p>
 <br><p>Qué es RESTful routing?</p>
-<br><p>   Cuantas acciones básicas tiene esta filosofía?</p>
-<br><p>   Cuales son?</p>
-<br><p>   Cuales verbos HTTP se utilizan en cada una de ellas?</p>
+<p>Rta. Las rutas restful son las encargadas de manejar un mapeo entre los 
+verbos http y las cciones del controlador y el crud.</p>
+<br><p>-Cuantas acciones básicas tiene esta filosofía?</p>
+<p>Rta. Esta filosofia tiene cuantro acciones basicas </p>
+<br><p>-Cuales son?</p>
+<p>Rta. crear - leer - acutalizar - eliminar </p>
+<br><p>-Cuales verbos HTTP se utilizan en cada una de ellas?</p>
+<p>Rta. Get - Post - Patch - Delete </p>
 
