--- a/app/views/statuc_pages/ruby.html.erb
+++ b/app/views/statuc_pages/ruby.html.erb
@@ -1,6 +1,12 @@
 <h1>Ruby</h1>
 <br><p>Interpolación de strings</p>
+<p>Rta. Disponer de una expresion dentro de un string para que ruby interprete el string definitivo</p>
 <br><p>Cómo se declara un array y cómo se adiciona un elemento al final del array</p>
+<p>Rta. Forma 1 : array = Array(nil) </p>
+<p> Forma 2 : array = [] </p>
+<p> Forma 3 : array = Array.new </p>
+<p> Forma 4 : array = Array(1,2.....10) </p>
+<p> Agregar un elemnto al final del array : array.unshift(elemento) </p>
 <br><p>Cómo se itera un array utilizando el comando each</p>
 <br><p>Cómo se declara un hash</p>
 <br><p>Cómo se itera un hash utilizando el comando each</p>
