--- a/app/views/statuc_pages/git.html.erb
+++ b/app/views/statuc_pages/git.html.erb
@@ -2,7 +2,12 @@
 <p> Inicialización de un repositorio de git nuevo en una aplicación existente</p>
 <p> Creación de un branch nuevo</p>
 <p> Realizar un commit incluyendo todos los cambios actuales</p>
-<p> Inicialización de un repositorio de git nuevo en una aplicación existente</p>
-<p> Inicialización de un repositorio de git nuevo en una aplicación existente</p>
-<p> Inicialización de un repositorio de git nuevo en una aplicación existente</p>
-<p> Inicialización de un repositorio de git nuevo en una aplicación existente</p>
+<p> Cómo enviar el código al repositorio remoto</p>
+<p> Cómo configurar el origen del repositorio remoto para evitar escribirlo
+siempre cada vez que se hace un push o un pull</p>
+<p> Diferencia entre un reset y revert</p>
+<p> Además de cambiar de ramas, para qué más se puede utilizar el comando git
+checkou</p>
+<p> Como puede ver los commits que se han realizado en el proyecto</p>
+<p> He modificado dos archivos y quiero hacer un commit por cada uno de ellos,
+cómo lo puedo hacer?</p>
