--- a/app/views/statuc_pages/home.html.erb
+++ b/app/views/statuc_pages/home.html.erb
@@ -2,11 +2,11 @@
 <p>
 Aqui encuentras las paginas del proyecto 
 <br>
-<br><a href="https://51f8a45f97a547eba6929f90638cb262.vfs.cloud9.us-east-2.amazonaws.com/statuc_pages/basics">Basics</a>
+<br> <%= link_to 'Basics', :action => :basics %>
 <br>
-<br><a href="https://51f8a45f97a547eba6929f90638cb262.vfs.cloud9.us-east-2.amazonaws.com/statuc_pages/ruby">Ruby</a>
+<br><%= link_to 'Ruby', :action => :ruby %>
 <br>
-<br><a href="https://51f8a45f97a547eba6929f90638cb262.vfs.cloud9.us-east-2.amazonaws.com/statuc_pages/git">Git</a>
+<br><%= link_to 'Git', :action => :git %>
 <br>
 <br>Angela Ochoa Proyecto 1
 <br>
