--- a/app/views/statuc_pages/basics.html.erb
+++ b/app/views/statuc_pages/basics.html.erb
@@ -7,11 +7,13 @@ Rails?</p>
   paginas de un proyecto definiendolas en la clase routes.</p>
 <br><p>Qué es RESTful routing?</p>
 <p>Rta. Las rutas restful son las encargadas de manejar un mapeo entre los 
-verbos http y las cciones del controlador y el crud.</p>
+verbos http y las acciones del controlador y el crud.</p>
 <br><p>-Cuantas acciones básicas tiene esta filosofía?</p>
 <p>Rta. Esta filosofia tiene cuantro acciones basicas </p>
 <br><p>-Cuales son?</p>
-<p>Rta. crear - leer - acutalizar - eliminar </p>
+<p>Rta. crear - leer - actualizar - eliminar </p>
 <br><p>-Cuales verbos HTTP se utilizan en cada una de ellas?</p>
 <p>Rta. Get - Post - Patch - Delete </p>
-
+<br>
+<p>Aqui encuentras las paginas del proyecto </p>
+<%= link_to 'Home', :action => :home %>
